# ucx_practice

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
cmake/: version.cmake
spack/envs/dev/: spack.yaml
spack/envs/dev/.spack-env/: view
spack/repos/ucx_practice/: repo.yaml
src/lib/ucxx/: CMakeLists.txt  nb_status.hpp  nbx_status.hpp  raii_types.hpp
