set(SELF ucxx)

# List of HPP (header) library files.
file(GLOB_RECURSE ${SELF}_HDR CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.hh")

add_library(${SELF} INTERFACE)
add_library(${PROJECT_NAME}::${SELF} ALIAS ${SELF})

target_compile_features(${SELF} INTERFACE cxx_std_20)
set_target_properties(${SELF} PROPERTIES PUBLIC_HEADER "${${SELF}_HDR}")

target_include_directories(
  ${SELF}
  INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>"
            "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>"
)

install(
  TARGETS ${SELF}
  EXPORT ${PROJECT_NAME}
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
  PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${SELF}" COMPONENT dev)

message(STATUS "Created target ${SELF} for export ${PROJECT_NAME}.")
